WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123973
nextBoundary and previousBoundary are very slow when there is a password field
https://bugs.webkit.org/show_bug.cgi?id=123973
Summary
nextBoundary and previousBoundary are very slow when there is a password field
Ryosuke Niwa
Reported
2013-11-07 01:03:09 PST
Merge
https://chromium.googlesource.com/chromium/blink/+/57366eec5e3edea54062d4e74c0e047f8681dbad
When iterating through DOM nodes nextBoundary and previousBoundary convert the contents of nodes using text security to a sequence of 'x' characters. The SimplifiedBackwardsTextIterator and TextIterator may iterate past node boundaries. Before this patch, the transformation was done looking at the starting node rather than the current node. In some situations, this replaced all boundaries with 'x' and caused the iterator to continue iterating and transforming until the extent of the document.
Attachments
Fixes the bug
(6.43 KB, patch)
2013-11-07 01:05 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-11-07 01:05:04 PST
Created
attachment 216273
[details]
Fixes the bug
Martin Robinson
Comment 2
2013-11-07 08:03:22 PST
I had considered posting this patch a few weeks ago, but couldn't figure out how to reproduce the bug in WebKit. I think the fix is valid regardless.
Alexey Proskuryakov
Comment 3
2013-11-07 09:09:11 PST
Does this address
bug 79815
by any chance?
Martin Robinson
Comment 4
2013-11-07 10:46:20 PST
(In reply to
comment #3
)
> Does this address
bug 79815
by any chance?
That is the test case I was using to test this patch, but I found that even without the patch, the test case shows no sluggish behavior. Can one of you verify that the test case still shows the issue on Mac?
Alexey Proskuryakov
Comment 5
2013-11-07 10:58:38 PST
There was an observable delay when deleting the last character in password field, using Safari 7 and its included WebKit. I didn't try a nightly.
Martin Robinson
Comment 6
2013-11-07 11:37:26 PST
(In reply to
comment #5
)
> There was an observable delay when deleting the last character in password field, using Safari 7 and its included WebKit. I didn't try a nightly.
If this patch fixes that, I say go for it. There may be something peculiar about the GTK+ port that means it doesn't affect us.
WebKit Commit Bot
Comment 7
2013-11-21 05:44:15 PST
Comment on
attachment 216273
[details]
Fixes the bug Clearing flags on attachment: 216273 Committed
r159619
: <
http://trac.webkit.org/changeset/159619
>
WebKit Commit Bot
Comment 8
2013-11-21 05:44:18 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 9
2013-11-21 10:08:47 PST
The editing/deleting/password-delete-performance.html test is timing out on bots.
http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=editing%2Fdeleting%2Fpassword-delete-performance.html
Alexey Proskuryakov
Comment 10
2013-11-22 09:32:32 PST
***
Bug 79815
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 11
2013-11-22 09:36:55 PST
Ryosuke, could you please fix the test? Tracked as
bug 124781
now.
Ryosuke Niwa
Comment 12
2013-11-22 18:01:56 PST
(In reply to
comment #11
)
> Ryosuke, could you please fix the test? Tracked as
bug 124781
now.
We should just remove the test.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug